--- a/examples/example-02.ini
+++ b/examples/example-02.ini
@@ -11,9 +11,9 @@ opt-set -G : Ninja
 opt-set -G : "Unix Makefiles"
 
 [MYPROJ_OPTIONS]
-opt-set-cmake-var  MYPROJ_CXX_FLAGS                         : "-O0 -fopenmp"
-opt-set-cmake-var  MYPROJ_ENABLE_OPTION_A BOOL FORCE        : ON
-opt-set-cmake-var  MYPROJ_ENABLE_OPTION_B BOOL PARENT_SCOPE : ON
+opt-set-cmake-var  MYPROJ_CXX_FLAGS       STRING       : "-O0 -fopenmp"
+opt-set-cmake-var  MYPROJ_ENABLE_OPTION_A BOOL   FORCE : ON
+opt-set-cmake-var  MYPROJ_ENABLE_OPTION_B BOOL         : ON
 
 [MYPROJ_SOURCE_DIR]
 opt-set /path/to/source/dir
