--- a/examples/example-03.ini
+++ b/examples/example-03.ini
@@ -11,14 +11,5 @@ opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
 [TEST_VAR_EXPANSION_UPDATE_01]
 opt-set cmake
 use TEST_VAR_EXPANSION_COMMON
+# This will be skipped by the BASH generator without a FORCE option added
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bar"
-
-
-[TEST_VAR_EXPANSION_UPDATE_02]
-use TEST_VAR_EXPANSION_UPDATE_01
-opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
-
-
-[TEST_VAR_EXPANSION_UPDATE_03]
-use TEST_VAR_EXPANSION_UPDATE_01
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bif"
