Improve examples and work on RTD landing page

--- a/examples/example-01.ini
+++ b/examples/example-01.ini
@@ -1,12 +1,6 @@
-#==============================================================================
-# SetProgramOptions Example
-#==============================================================================
-
-
-[BASH_VERSION]
-opt-set bash
-opt-set --version
-
+#
+# example-01.ini
+#
 [LS_COMMAND]
 opt-set ls
 
