--- a/examples/example-03.ini
+++ b/examples/example-03.ini
@@ -1,9 +1,6 @@
-# ------------------------------------------------------------------------------
 #
-# Example with variable expansion with SetProgramOptionsCMake
+# example-03.ini
 #
-# ------------------------------------------------------------------------------
-
 [TEST_VAR_EXPANSION_COMMON]
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
 
